Message: 添加三方库 Add: 1.Koin 2.Glide 3.OkHttp 4.Retrofit 5.Arouter 6.LiveData+ViewModel

--- a/fastsy_android/build.gradle
+++ b/fastsy_android/build.gradle
@@ -1,8 +1,29 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.3' apply false
-    id 'com.android.library' version '7.1.3' apply false
+//// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//plugins {
+//    id 'com.android.application' version '7.1.3' apply false
+//    id 'com.android.library' version '7.1.3' apply false
+//}
+
+buildscript {
+    ext.kotlin_version = '1.7.10'
+    ext.koin_version = '3.2.1'
+    ext.lifecycle_version = "2.2.0"
+    // 对应kotlin gradle1.5.30
+    ext.ksp_version = '1.7.10'
+    ext.koin_annotations_version = "1.0.1"
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
