--- a/fastsy_android/app/build.gradle
+++ b/fastsy_android/app/build.gradle
@@ -1,5 +1,9 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+//    id "com.google.devtools.ksp" version "$ksp_version"
 }
 
 android {
@@ -25,6 +29,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -35,4 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation project(':lib_base')
+    annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
 }
